# Say-Flow

./: .cursorignore  .gitignore  assistant.py  requirements.txt  test.py
backend/: README.md  pyproject.toml  sayFlow_backend.md
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: __init__.py  health.py  realtime.py  stats.py  transcriptions.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  models.py  supabase.py
backend/app/schemas/: __init__.py  stats.py  transcriptions.py
backend/app/services/: __init__.py  usage.py
backend/app/services/transcription/: __init__.py  base.py  gemini.py  openai.py  registry.py
backend/sayflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: create_tables.sql  migrate_multi_provider.sql  test_providers.py
sayflow-electron/: .env  README.md  entitlements.mac.plist  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.main.json  tsconfig.main.tsbuildinfo  tsconfig.preload.json  vite.config.ts
sayflow-electron/src/main/: main.ts  preload.ts
sayflow-electron/src/main/ipc/: authIpc.ts  index.ts  outboxIpc.ts  realtimeIpc.ts  recordingIpc.ts  settingsIpc.ts
sayflow-electron/src/main/services/: audioFileStore.ts  backendClient.ts  hotkeyService.ts  outboxStore.ts  pasteService.ts  realtimeClient.ts  settingsStore.ts  (+1 more)
sayflow-electron/src/renderer/: index.html  main.tsx
sayflow-electron/src/widget/: pcmProcessor.worklet.js  realtimeAudioCapture.ts  styles.css  widget.html  widget.tsx  widgetState.ts
(+25 files in other folders)
